--- a/User/index.html
+++ b/User/index.html
@@ -89,7 +89,7 @@
 								<li><a href="#">About</a></li>
 								<li><a href="#">Doctors</a></li>
 								<li><a href="#">Patients</a></li>
-								<li><a href="#">Appointment</a></li>
+								<li><a href="#">Appointment	</a></li>
 							</ul>
 							<!-- End Contact -->
 						</div>
@@ -134,7 +134,7 @@
 											<li><a href="#">Patients </a></li>
 											<li><a href="#">Appointment<i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="Appointment.html">For Appointment Details</a></li>
+													<li><a href="appointment.php">For Appointment Details</a></li>
 												</ul>
 											</li>
 											
